# .dotfiles

./: README.md  install.sh
alacritty/: alacritty.yml
awesome/: rc.lua
eww/: eww.yuck
hypr/: hyprland.conf  hyprpaper.conf
mako/: config
nvim/: init.lua
nvim/lua/core/: keymaps.lua  options.lua  plugins.lua
nvim/lua/core/plugin_config/: init.lua  lsp.lua  nvim-comment.lua  nvim-tree.lua  telescope.lua  treesitter.lua  trouble.lua
picom/: picom.conf
scripts/src/: genfile  genprojectcpp  myscripts  pdf-viewer  runtmpcpp  snvim  tmpcpp
scripts/templates/: cpp_template.cpp  latex_template.tex
scripts/templates/cpp_project_temp/: CMakeLists.txt  run.sh
tmux/: tmux.conf
waybar/: config  style.css
waybar/scripts/: bluetooth-connect.sh
wofi/: config  style.css
x11/: .xprofile
zsh/: .zshrc  aliases.zsh  bindings.zsh  completion.zsh  exports.zsh  prompt.zsh  zsh-exports
